# async_coro

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package-lock.json
async_coro/: CMakeLists.txt
async_coro/include/async_coro/: atomic_queue.h  atomic_stack.h  await_callback.h  base_handle.h  base_promise.h  callback.h  cancel.h  config.h  coroutine_suspender.h  execution_queue_mark.h  execution_system.h  executor_data.h  generator.h  i_execution_system.h  move_only_function.h  promise.h  promise_result.h  scheduler.h  start_task.h  switch_thread.h  switch_to_thread.h  task.h  task_handle.h  task_handle_operators.h  task_launcher.h  thread_notifier.h  unique_function.h  warnings.h  when_all.h  when_any.h  working_queue.h  working_queue2.h  working_queue3.h
async_coro/include/async_coro/await/: await_callback.h  cancel.h  cancel_after_time.h  execute_after_time.h  get_scheduler.h  sleep.h  start_task.h  switch_to_queue.h
async_coro/include/async_coro/internal/: advanced_awaiter.h  advanced_awaiter_fwd.h  aligned_tagged_ptr.h  all_awaiter.h  always_false.h  any_awaiter.h  await_callback.h  await_callback_awaitable.h  await_cancel_task.h  await_sleep.h  await_start_task.h  await_suspension_wrapper.h  await_switch.h  await_switch_awaitable.h  await_when_all.h  await_when_any.h  base_handle_ptr.h  callback_execute_command.h  cancel_after_time.h  continue_callback.h  continue_function.h  coroutine_suspender.h  deduce_function_signature.h  execute_after_time.h  get_scheduler_awaiter.h  handle_awaiter.h  hardware_interference_size.h  is_invocable_by_signature.h  move_only_function.h  passkey.h  promise_result.h  promise_result_base.h  promise_result_holder.h  promise_type.h  remove_void_tuple.h  scheduled_run_data.h  store_type.h  tagged_pair.h  task_awaiters.h  task_handle_awaiter.h  (+4 more)
async_coro/include/async_coro/internal/thread_safety/: analysis.h  condition_variable.h  mutex.h  no_lock_mutex.h  no_lock_shared_mutex.h  shared_lock.h  shared_mutex.h  spin_lock_mutex.h  unique_lock.h
async_coro/include/async_coro/thread_safety/: analysis.h  condition_variable.h  light_mutex.h  mutex.h  no_lock_mutex.h  no_lock_shared_mutex.h  shared_lock.h  shared_mutex.h  spin_lock_mutex.h  unique_lock.h
async_coro/include/async_coro/utils/: allocate_callback.h  always_false.h  callback_base_ptr.h  callback_fwd.h  callback_on_stack.h  callback_ptr.h  function_view.h  get_owner.h  no_unique_address.h  non_initialised_value.h  passkey.h  set_thread_name.h  unique_function.h  unique_function_storage.h
async_coro/src/: base_handle.cpp  base_handle_ptr.cpp  callback.cpp  coroutine_suspender.cpp  execution_system.cpp  executor_data.cpp  scheduler.cpp  set_thread_name.cpp  task.cpp  working_queue.cpp  working_queue2.cpp  working_queue3.cpp
examples/server/: .clang-tidy  CMakeLists.txt  README.md  plan.md
examples/server/certs/: generate_dev_cert.sh
examples/server/include/server/: tcp_server.h  tcp_server_config.h  tls_stream.h
examples/server/include/server/http1/: http_server.h  http_status_code.h  request.h  response.h  router.h
examples/server/include/server/socket_layer/: connection.h  connection_id.h  listener.h  reactor.h  socket_config.h  ssl_connection.h  ssl_context.h
examples/server/include/server/utils/: string_storage.h
examples/server/lib/: CMakeLists.txt
examples/server/lib/include/server/: ssl_config.h  tcp_server.h  tcp_server_config.h
examples/server/lib/src/: tcp_server.cpp
examples/server/lib/src/http1/: compression_negotiation.cpp  http_method.cpp  http_server.cpp  http_status_code.cpp  http_version.cpp  request.cpp  response.cpp  router.cpp  session.cpp
examples/server/lib/src/socket_layer/: connection.cpp  listener.cpp  reactor.cpp  socket_config.cpp  ssl_connection.cpp  ssl_context.cpp
examples/server/lib/src/utils/: brotli_compress.cpp  brotli_decompress.cpp  compression_pool.cpp  (+6 more)
examples/server/src/: main.cpp  simple_server.cpp  tcp_server.cpp
examples/server/src/http1/: http_status_code.cpp  request.cpp  response.cpp  router.cpp  session.cpp
examples/server/src/socket_layer/: connection.cpp  listener.cpp  reactor.cpp  ssl_connection.cpp  ssl_context.cpp
examples/server/src/utils/: string_storage.cpp
examples/server/tests/src/: base64_tests.cpp  brotli_compress_tests.cpp  compression_negotiator_tests.cpp  compression_pool_tests.cpp  http_encoding_tests.cpp  http_encodings_tests.cpp  http_keepalive_tests.cpp  request_parser_tests.cpp  sha1_tests.cpp  web_socket_deflate_tests.cpp  web_socket_integration_fixture.h  web_socket_integration_tests.cpp  web_socket_tests.cpp  ws_test_client.cpp  ws_test_client.h  zlib_compress_tests.cpp  zstd_compress_tests.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/AndroidGoogleTest/app/: build.gradle
tests/AndroidGoogleTest/gradle/wrapper/: gradle-wrapper.properties
tests/googletest/app/: build.gradle
tests/src/: main.cpp  memory_hooks.cpp  memory_hooks.h  stack_trace_print_on_kill.cpp  working_queue2.cpp  working_queue2.h  working_queue3.cpp  working_queue3.h
tests/src/common/: main.cpp
tests/src/common/utils/: memory_hooks.cpp  memory_hooks.h  stack_trace_print_on_kill.cpp  stack_trace_print_on_kill.h
tests/src/long_runnung_tests/: atomic_collections_tests.cpp  atomic_queue_tests.cpp  working_queue_long_tests.cpp
tests/src/simple_tests/: aligned_tagged_ptr_tests.cpp  await_callback_tests.cpp  callback_tests.cpp  cancel_after_time_tests.cpp  cancel_task_tests.cpp  exception_handling_tests.cpp  execute_after_time_tests.cpp  execution_system_tests.cpp  function_view_tests.cpp  lambda_lifetime_tests.cpp  light_mutex_tests.cpp  move_only_function_tests.cpp  sleep_tests.cpp  task_operator_tests.cpp  task_tests.cpp  unique_function_tests.cpp  virtual_tagged_ptr_tests.cpp  working_queue_tests.cpp
tests/src/tests/: atomic_queue_tests.cpp  dummy_test.cpp  generator_tests.cpp  memory_hooks.cpp  memory_hooks.h  move_only_function_tests.cpp  promise_tests.cpp  task_tests.cpp  working_queue2.h  working_queue3.h  working_queue_tests.cpp
(+72 files in other folders)
